edited classes, remove, add, edit

--- a/materials/html/assets/css/style.css
+++ b/materials/html/assets/css/style.css
@@ -4,6 +4,7 @@
   height: 89.5vh;
   /* text-align: center; */
   margin-right: 25px;
+  background-color: rgb(70, 70, 70);
 }
 
 .sidebar_mm_height {
