--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@
 
 body {
   max-width: 100%;
-  font-family: "Encode Sans Semi Expanded", sans-serif;
+  font-family: "Encode Sans Semi Expanded", sans-serif !important;
 }
 
 .btn:hover {
