--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -10,8 +10,8 @@
     justify-content: center;
     align-items: center;
     min-height: 80vh;
-    background-color: #00ffbb;
-    background-image: linear-gradient(0deg, #fff 0%, #e7a83d 20%, #97d9e1 80%, #fff 100%);
+    /* background-color: #00ffbb;
+    background-image: linear-gradient(0deg, #fff 0%, #e7a83d 20%, #97d9e1 80%, #fff 100%); */
     font-family: 'Righteous', cursive;
     margin-top: 25px;
     margin-bottom: 25px;
