--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,7 @@ body {
   align-items: center;
   flex-wrap: wrap;
   padding: 40px 0;
+  margin-top: 50px;
 }
 
 .con .box {
@@ -107,18 +108,18 @@ body {
   width: calc(100% - 90px);
 }
 
-.con .box:nth-child(1):before,
-.con .box:nth-child(1):after {
-  background: linear-gradient(315deg, #ffbc00, #ff0058);
-}
-
 .con .box:nth-child(2):before,
 .con .box:nth-child(2):after {
-  background: linear-gradient(315deg, #03a9f4, #ff0058);
+  background: linear-gradient(315deg, #ffbc00, #ff0058);
 }
 
 .con .box:nth-child(3):before,
 .con .box:nth-child(3):after {
+  background: linear-gradient(315deg, #03a9f4, #ff0058);
+}
+
+.con .box:nth-child(4):before,
+.con .box:nth-child(4):after {
   background: linear-gradient(315deg, #4dff03, #00d0ff);
 }
 
