--- a/materials/html/assets/css/style.css
+++ b/materials/html/assets/css/style.css
@@ -1,10 +1,10 @@
 .CodeMirror.cm-s-midnight {
     height: auto;
-    border: 3px solid var(--bs-cyan);
+    border: 3px solid rgb(227, 76, 38);
 }
 
 .preview {
-    border: 3px solid var(--bs-cyan);
+    border: 3px solid rgb(227, 76, 38);
 }
 .compilator{
     margin-bottom: 20px;
