--- a/teacher/template/footer/footer.css
+++ b/teacher/template/footer/footer.css
@@ -1,7 +1,7 @@
 footer {
-    position: absolute !important;
+    /* position: absolute !important;
     width: 100% !important;
-    bottom: 0 !important;
+    bottom: 0 !important; */
 }
 
 a.sladecek{
