--- a/teacher/template/footer/footer.css
+++ b/teacher/template/footer/footer.css
@@ -1,8 +1,8 @@
-footer {
+/* footer {
     position: absolute !important;
     width: 100% !important;
     bottom: 0 !important;
-}
+} */
 
 a.sladecek{
     color: white;
